force-app/main/default/objects/Invoice__c/fields/Amount_High_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Amount_High_Surcharge__c</fullName>
    <label>Amount High Surcharge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>