force-app/main/default/objects/Invoice__c/fields/Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Amount_Total__c</fullName>
    <label>Amount Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>