force-app/main/default/objects/Invoice__c/fields/Paid_by_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Paid_by_Email_ID__c</fullName>
    <label>Paid by Email ID</label>
    <type>Email</type>
</CustomField>