force-app/main/default/objects/Invoice__c/fields/Paid_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Paid_by_Name__c</fullName>
    <label>Paid by Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>