force-app/main/default/objects/Invoice__c/fields/Person_account__c.field-meta.xml
<CustomField>
    <fullName>Person_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person account</label>
    <referenceTo>Person_account__c</referenceTo>
    <relationshipLabel>Invoice</relationshipLabel>
    <relationshipName>Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>