force-app/main/default/objects/Invoice__c/recordTypes/Merchant.recordType-meta.xml
<RecordType>
    <fullName>Merchant</fullName>
    <active>true</active>
    <label>Merchant</label>
</RecordType>