force-app/main/default/objects/Invoice__c/recordTypes/Merchant_Passenger.recordType-meta.xml
<RecordType>
    <fullName>Merchant_Passenger</fullName>
    <active>true</active>
    <label>Merchant Passenger</label>
</RecordType>